fix scrollbar

--- a/frontend/src/theme.scss
+++ b/frontend/src/theme.scss
@@ -17,10 +17,10 @@
 }
 
 .os-scrollbar {
-    --os-size: 16px;
-    --os-padding-perpendicular: 4px;
+    --os-size: 10px !important;
+    --os-padding-perpendicular: 2px !important;
 
-    --os-handle-bg: rgba(255, 255, 255, 0.44);
-    --os-handle-bg-hover: rgba(255, 255, 255, 0.55);
-    --os-handle-bg-active: rgba(255, 255, 255, 0.66);
+    --os-handle-bg: rgba(255, 255, 255, 0.44) !important;
+    --os-handle-bg-hover: rgba(255, 255, 255, 0.55) !important;
+    --os-handle-bg-active: rgba(255, 255, 255, 0.66) !important;
 }
